--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,8 @@
 <body class="container">
   <app-root></app-root>
 
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+  <script src="sweetalert2.all.min.js"></script>
 
 </body>
 </html>
